# clerk

./: .env.example  .gitignore  .pr-description.md  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  ELECTION_FINANCE_INTEGRATION.md  README.md  alembic.ini  clerk.code-workspace  justfile  pyproject.toml  test_import.py
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 45db71312424_initial_schema.py  9daf09ff2554_add_pipeline_state_columns.py  c27bd77144ce_add_queue_tables.py  e032d9c68444_fix_boolean_values_in_sqlite.py  e2eeb77e18bc_add_has_finance_data_column.py  f3d4e5b6c7a8_add_finance_metadata_columns.py  s9z7il1abnmz_rename_site_id_to_subdomain.py
deployment/grafana/: QUICKSTART.md  README.md  clerk-pipeline-dashboard.json  test-queries.sql
deployment/launchd/: README.md  com.civicband.healthcheck.plist.template  com.civicband.reconcile.plist.template  com.civicband.update.plist.template  healthcheck.sh.template  update-wrapper.sh.template
deployment/systemd/: README.md  clerk-reconcile.service  clerk-reconcile.timer
docs/: DEVELOPMENT.md  MIGRATION-pipeline-state-consolidation.md  architecture.md  conf.py  deployment.md  index.md  ocr-logging.md  plugin-development.md  requirements.txt
docs/api/: cli.md  db.md  fetcher.md  hookspecs.md  index.md
docs/design-docs/: index.md
docs/developer-guide/: architecture.md  index.md  plugin-development.md  testing.md
docs/getting-started/: basic-usage.md  index.md  installation.md  quickstart.md
docs/plans/: 2024-12-28-spacy-matcher-implementation.md  2024-12-28-spacy-matcher-vote-extraction-design.md  2024-12-28-text-extraction-design.md  2024-12-28-text-extraction-implementation.md  2025-12-03-plugin-directory-discovery-design.md  2025-12-03-plugin-directory-discovery.md  2025-12-04-etl-architecture-design.md  2025-12-04-etl-architecture-implementation.md  2025-12-18-fetcher-integration-design.md  2025-12-18-fetcher-integration-impl.md  2025-12-31-extraction-caching-design.md  2025-12-31-extraction-caching-impl.md  2025-12-31-sequential-extraction-design.md  2025-12-31-sequential-extraction-implementation.md  2025-12-31-spacy-memory-optimization-design.md  2026-01-01-db-text-extraction-refactoring.md  2026-01-01-refactoring-progress.md  2026-01-02-datastore-plugin-hooks.md  2026-01-03-ocr-logging-exception-handling-design.md  (+31 more)
examples/: basic_plugin.py  custom_fetcher.py  observability_plugin.py  sample_workflow.py
migrations/: 001_add_pipeline_state_columns.sql  001_add_pipeline_state_columns.sqlite.sql
scripts/: check_failed_ocr_jobs.py  cleanup_deferred_coordinators.py  diagnose-workers.sh  diagnose_pipeline.py  fix_extraction_stage.py  install-workers.sh  investigate_failed_ocr.py  launchd-worker-template.plist  migrate_stuck_sites.py  reconcile_pipeline.py  reload-workers.sh  uninstall-workers.sh
tests/: __init__.py  conftest.py  test_adapter.py  test_cli.py  test_db.py  test_db_hooks.py  test_defaults.py  test_etl_hooks.py  test_extract_cli.py  test_extraction.py  test_fetcher.py  test_finance_db.py  test_hookspecs.py  test_integration.py  test_ocr_utils.py  test_output.py  test_paddleocr.py  test_pipeline.py  test_pipeline_state.py  test_plugin_loader.py  test_plugin_loader_cli.py  test_plugin_new_hooks.py  test_queue.py  test_queue_db.py  test_reconciliation.py  test_sentry.py  test_utils.py  test_utils_refactor.py  test_workers.py
(+50 files in other folders)
